SSCSCI-2347: fix failing functional tests